--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,41 @@ body::-webkit-scrollbar,
   background-position: center;
   background-repeat: no-repeat;
 }
+
+/* Toggle Switch */
+.toggle-input:checked + .toggle-slider {
+  background-color: #4caf50;
+}
+
+.toggle-slider {
+  position: relative;
+  display: inline-block;
+  width: 34px;
+  height: 20px;
+  background-color: #ccc;
+  border-radius: 50px;
+  transition: 0.3s;
+}
+
+.toggle-slider:before {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 4px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: white;
+  transition: 0.3s;
+}
+
+.toggle-input:checked + .toggle-slider:before {
+  transform: translateX(14px);
+}
+
+.toggle-input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
