-redirect to the home page if token present

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  font-family: "Poppins";
+  font-family: "Raleway", sans-serif;
 }
 
 input,
@@ -62,4 +62,3 @@ body::-webkit-scrollbar,
   width: 0;
   height: 0;
 }
-
